Migrating to Java 8. Minor clean-up.